# hello-packages

./: pyproject.toml
hello_packages/: hello.py
tests/: test_hello_packages.py
