[tool.poetry]
name = "hello-packages"
version = "0.1.2"
description = ""
authors = ["Petr Cvengros <petr@cvengros.cz>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
say_hello = "hello_packages.hello:hello_world"
